   stick, so that it was always the first listed item that was displayed in the dropdown.
 - Fixed a bug in the 'Services' combobox of the 'Task Decomposition' dialog where, if
   the first and only item selected was 'Default Worklist', and there were other services
   listed that preceded it alphabetically, then the selection would not stick the next
   time the dialog was shown.
 - Fixed a ClassCastException which occurred when analysing a net using reduction rules in
   certain scenarios.

(e) WORKLET SERVICE:
 - Ripple-down rules now also accept XPath/XQuery predicates as conditional expressions.
 - Fixed an JDOM exception thrown when enabling the Exception service.
 - Removed last vestiges of hard-coded URL to service - it is now dynamically read from
   the engine's persisted service tables.

(f) INSTALLERS:
 - The properties for the Windows shortcut created to the Editor now explicitly starts
   'javaw.exe' instead of relying on the existing 'jar' file association.
 - Fixed a bug where the Windows file association for compressed files was changed to be
   associated the Editor.

(g) NEW SERVICES:
 - Digital Signature Service: authenticates the information provided on a form using
   a digital signature via x509 certificates and private keys.
 - Mail Sender Service: provides a custom form for a workitem, from which an email can
   be sent.

                         #############################

    Please report any bugs or problems via the YAWL sourceforge page:

                     http://sourceforge.net/projects/yawl


 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++


 
                      YAWL Release 2.0 beta (Update 3) 18/11/2008
                      ===========================================

This beta update is an interim release of the YAWL Environment, and includes a
number of bug-fixes and enhancements. Please take the time to read the change list