@@ -1,8 +1,8 @@
-#Wed Mar 18 22:48:16 EST 2009
-BuiltBy=adamsmj
+#Thu Mar 19 17:46:44 EST 2009
 OSVersion=10.4.11
-BuildNumber=258
-Version=_Release_2.0_RC1
-JavaVersion=1.5.0_16
+BuiltBy=adamsmj
+BuildNumber=261
 OS=Mac OS X
-BuildDate=2009/03/18 22\:48
+JavaVersion=1.5.0_16
+Version=_2.0_RC1
+BuildDate=2009/03/19 17\:46
